# zk-transfer

./: README.md  allkeys.json  app.py  constants.py  get_all_keys.py  zk_transfer.py  zk_transfer.sol
librustzk/: Cargo.toml  Makefile  pre-transfer.vk  preparation.vk  transfer.vk  zk.h
librustzk/src/: lib.rs  zk.rs
static/: demo.js
templates/: index.html
